--- a/invessence/modules/web/src/main/webapp/pages/consumer/a1.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/a1.xhtml
@@ -5,104 +5,112 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-        <p:panelGrid id="consumergoals" StyleClass="ui-noborder">
-            <p:row>
-                <p:column>
-                    Invest for
-                </p:column>
-                <p:column>
-                    <p:selectOneMenu id="goal"
-                                     value="#{cepb.goal}"
-                                     process="@this"
-                                     required="true" requiredMessage="Select one investment goal.">
-                        <f:selectItem itemLabel="- Choose one -" itemValue=""/>
-                        <f:selectItem itemLabel="Grow Wealth" itemValue="Growth"/>
-                        <f:selectItem itemLabel="Generate Income" itemValue="Income"/>
-                        <f:selectItem itemLabel="Safety" itemValue="Retirement"/>
-                        <p:ajax listener="#{cepb.onChange}" update=":ceForm:workArea, :ceForm:dPanel1"/>
-                    </p:selectOneMenu>
-                </p:column>
-                <p:column>
-                    Account Type
-                </p:column>
-                <p:column>
-                    <p:selectBooleanButton id="accountaxable"
-                                           update=":ceForm:workArea, :ceForm:dPanel1"
-                                           value="#{cepb.accountTaxable}" onLabel="Taxable" offLabel="Non-taxable">
-                    <p:ajax listener="#{cepb.onChange}" update=":ceForm:workArea, :ceForm:dPanel1"/>
-                    </p:selectBooleanButton>
-                </p:column>
-            </p:row>
+    <p:panelGrid id="consumergoals" styleClass="invNBgrid">
+        <p:row>
+            <p:column>
+                Portfolio Name
+            </p:column>
+            <p:column colspan="3">
+                <p:inputText value="#{cepb.portfolioName}">
+                    <p:ajax listener="#{cepb.onChange}"
+                            update=":ceForm:displayInfo"/>
+                </p:inputText>
+            </p:column>
+        </p:row>
+        <p:row>
+            <p:column>
+                Invest for
+            </p:column>
+            <p:column>
+                <p:selectOneMenu id="goal"
+                                 value="#{cepb.goal}">
+                    <p:ajax listener="#{cepb.onChangeValue}"
+                            update=":ceForm:workArea, :ceForm:displayInfo, :ceForm:graphArea"/>
+                    <f:selectItem itemLabel="Grow Wealth" itemValue="Growth"/>
+                    <f:selectItem itemLabel="Generate Income" itemValue="Income"/>
+                    <f:selectItem itemLabel="Safety" itemValue="Retirement"/>
+                </p:selectOneMenu>
+            </p:column>
+            <p:column>
+                Account Type
+            </p:column>
+            <p:column>
+                <p:selectBooleanButton id="accountaxable"
+                                       value="#{cepb.accountTaxable}" onLabel="Taxable"
+                                       offLabel="Non-taxable">
+                    <p:ajax listener="#{cepb.onChangeValue}"
+                            update=":ceForm:workArea, :ceForm:displayInfo, :ceForm:graphArea"/>
+                </p:selectBooleanButton>
+            </p:column>
+        </p:row>
 
-            <p:row>
-                <p:column>
-                    Your Current Age
-                </p:column>
-                <p:column>
-                    <p:spinner id="age" value="#{cepb.age}"
-                               update=":ceForm:workArea, :ceForm:dPanel1"
-                               min="1" max="100" stepFactor="1"
-                               required="true" requiredMessage="Age should be of between 1 to 100.">
-                        <p:ajax listener="#{cepb.onChange}" update=":ceForm:workArea, :ceForm:dPanel1"/>
-                    </p:spinner>
-                </p:column>
-                <p:column>
-                    #{cepb.horizonQuestion}
-                </p:column>
-                <p:column>
-                    <p:spinner id="horizon" value="#{cepb.horizon}"
-                               min="1" max="100" stepFactor="1"
-                               required="true" requiredMessage="Investment years should be of between 1 to 100.">
-                        <p:ajax listener="#{cepb.onChange}" update=":ceForm:workArea, :ceForm:dPanel1"/>
-                    </p:spinner>
-                </p:column>
-            </p:row>
+        <p:row>
+            <p:column>
+                Your Current Age
+            </p:column>
+            <p:column>
+                <p:spinner id="age" value="#{cepb.age}"
+                           min="1" max="100" stepFactor="1">
+                    <p:ajax listener="#{cepb.onChangeValue}"
+                            update=":ceForm:workArea, :ceForm:graphArea"/>
+                </p:spinner>
+            </p:column>
+            <p:column>
+                #{cepb.horizonQuestion}
+            </p:column>
+            <p:column>
+                <p:spinner id="horizon" value="#{cepb.horizon}"
+                           min="1" max="100" stepFactor="1">
+                    <p:ajax listener="#{cepb.onChange}"
+                            update=":ceForm:workArea, :ceForm:graphArea"/>
+                </p:spinner>
+            </p:column>
+        </p:row>
 
 
-            <p:row>
-                <p:column>
-                    Initial Investment
-                </p:column>
-                <p:column>
-                    <pe:inputNumber id="initialInvestment"
-                                    update=":ceForm:workArea, :ceForm:dPanel1"
-                                    value="#{cepb.initialInvestment}"
-                                    required="true"
-                                    maxlength="15" decimalPlaces="0" symbol="$"
-                                    requiredMessage="Investment should be greater then $5,000.">
-                        <p:ajax listener="#{cepb.onChange}" update=":ceForm:workArea, :ceForm:dPanel1"/>
-                    </pe:inputNumber>
-                </p:column>
-                <p:column>
-                    Recurring Deposits (per year)
-                </p:column>
-                <p:column>
-                    <pe:inputNumber id="recurringinvestment"
-                                    value="#{cepb.recurringInvestment}"
-                                    maxlength="15" decimalPlaces="0" symbol="$">
-                        <p:ajax listener="#{cepb.onChange}"/>
-                    </pe:inputNumber>
+        <p:row>
+            <p:column>
+                Initial Investment
+            </p:column>
+            <p:column>
+                <pe:inputNumber id="initialInvestment"
+                                value="#{cepb.initialInvestment}"
+                                maxlength="15" decimalPlaces="0" symbol="$">
+                    <p:ajax event="blur" listener="#{cepb.onChangeValue}"
+                            update=":ceForm:workArea, :ceForm:displayInvestment, :ceForm:graphArea"/>
+                </pe:inputNumber>
+            </p:column>
+            <p:column>
+                Recurring Deposits (per year)
+            </p:column>
+            <p:column>
+                <pe:inputNumber id="recurringinvestment"
+                                value="#{cepb.recurringInvestment}"
+                                maxlength="15" decimalPlaces="0" symbol="$">
+                    <p:ajax event="blur" listener="#{cepb.onChange}"
+                            update=":ceForm:workArea, :ceForm:graphArea"/>
+                </pe:inputNumber>
 
-                </p:column>
-            </p:row>
+            </p:column>
+        </p:row>
 
-            <p:row>
-                <p:column>
-                    Investment Experience
-                </p:column>
-                <p:column colspan="3">
-                    <p:selectOneButton value="#{cepb.experience}">
-                        <f:selectItem itemLabel="None" itemValue="0" />
-                        <f:selectItem itemLabel="1-3" itemValue="2" />
-                        <f:selectItem itemLabel="3-5" itemValue="4" />
-                        <f:selectItem itemLabel="5-10" itemValue="8" />
-                        <f:selectItem itemLabel="10+" itemValue="20" />
-                        <p:ajax listener="#{cepb.onChange}" update=":ceForm:workArea, :ceForm:dPanel1"/>
-                    </p:selectOneButton>
+        <p:row>
+            <p:column>
+                Investment Experience
+            </p:column>
+            <p:column colspan="3">
+                <p:selectOneButton value="#{cepb.experience}">
+                    <p:ajax listener="#{cepb.onChange}"/>
+                    <f:selectItem itemLabel="None" itemValue="0" />
+                    <f:selectItem itemLabel="1-3" itemValue="2" />
+                    <f:selectItem itemLabel="3-5" itemValue="4" />
+                    <f:selectItem itemLabel="5-10" itemValue="8" />
+                    <f:selectItem itemLabel="10+" itemValue="20" />
+                </p:selectOneButton>
 
-                </p:column>
-            </p:row>
+            </p:column>
+        </p:row>
 
-        </p:panelGrid>
+    </p:panelGrid>
 
 </ui:composition>
