--- a/invessence/modules/web/src/main/webapp/pages/consumer/cdash.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/cdash.xhtml
@@ -5,6 +5,10 @@
                 xmlns:p="http://primefaces.org/ui"
                 template="/template/common/invlayout.xhtml">
 
+    <f:metadata>
+        <f:event type="preRenderView" listener="#{cdash.preRenderView}"/>
+    </f:metadata>
+
     <ui:define name="content">
 
         <!-- BOX START -->
@@ -30,46 +34,49 @@
                             <h:form id="form">
 
                                 <p:dataTable id="singleDT" var="investment" value="#{cdash.manageAccountList}"
-                                             emptyMessage="No account were created.  Use new application to add account.">
+                                             emptyMessage="No account were created.  Use new application to add account."
+                                        reflow="true">
 
-                                    <p:column>
+                                    <p:column styleClass="Wid5 TextAlLeft">
                                         <p:commandButton id="activeButton" rendered="#{investment.managed}"
+                                                         styleClass="Fs16 GreenButton"
                                                          process="@this" immediate="true"
-                                                         icon="ui-icon-circle-plus"
+                                                         icon="fa fa-search-plus Fs14 white"
                                                          action="#{cdash.doSelectedAction}">
                                             <p:tooltip id="activeToolTipFade" for="activeButton" value="View" />
                                             <f:setPropertyActionListener value="#{investment}"
                                                                          target="#{cdash.selectedAccount}"/>
                                         </p:commandButton>
                                         <p:commandButton id="pendingButton" rendered="#{! investment.managed}"
+                                                         styleClass="Fs16 BlueButton"
                                                          process="@this" immediate="true"
-                                                         icon="ui-icon-pencil"
+                                                         icon="fa fa-pencil-square-o Fs14 white"
                                                          action="#{cdash.doSelectedAction}">
                                             <p:tooltip id="pendingToolTipFade" for="pendingButton" value="Edit" />
                                             <f:setPropertyActionListener value="#{investment}"
                                                                          target="#{cdash.selectedAccount}"/>
                                         </p:commandButton>
                                     </p:column>
-                                    <p:column sortBy="#{investment.portfolioName}" headerText="Portfolio"
-                                              style="text-align: left"
+                                    <p:column styleClass="Wid30 TextAlLeft"
+                                              sortBy="#{investment.portfolioName}" headerText="Portfolio"  priority="2"
                                               resizable="true">
                                         <h:outputText value="#{investment.portfolioName}"/>
                                     </p:column>
 
-                                    <p:column sortBy="#{investment.goal}" headerText="Type"
-                                              style="text-align: left"
+                                    <p:column styleClass="Wid30 TexAlLeft"
+                                              sortBy="#{investment.goal}" headerText="Type" priority="3"
                                               resizable="true">
                                         <h:outputText value="#{investment.goal}"/>
                                     </p:column>
 
-                                    <p:column sortBy="#{investment.displayActiveAcctNum}" headerText="Account#"
-                                              style="text-align: left"
+                                    <p:column styleClass="Wid20 TexAlLeft"
+                                              sortBy="#{investment.displayActiveAcctNum}" headerText="Account#"
                                               resizable="true">
                                         <h:outputText value="#{investment.displayActiveAcctNum}"/>
                                     </p:column>
 
-                                    <p:column headerText="Invested"
-                                              style="text-align: right"
+                                    <p:column tyleClass="Wid15 TexAlRight"
+                                              headerText="Invested"
                                               resizable="true">
                                         <h:outputText value="#{investment.actualInvestment}" rendered="#{investment.managed}">
                                             <f:convertNumber currencySymbol="$" type="currency"/>
