--- a/invessence/modules/web/src/main/webapp/pages/consumer/q1.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/q1.xhtml
@@ -1,34 +1,22 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:pe="http://primefaces.org/ui/extensions">
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions">
+    <h3>
+        1. What is your employment situation?
+    </h3>
+    <p:selectOneRadio value="#{cepb.selectedchoice1}"
+                      layout="pageDirection"
+                      valueChangeListener="#{cepb.onChangeValue}">
+        <f:selectItem itemLabel="My job is very secure." itemValue="0" />
+        <f:selectItem itemLabel="My job security could change quickly." itemValue="1" />
+        <f:selectItem itemLabel="I am not working or retired but have secure income." itemValue="2" />
+        <f:selectItem itemLabel="I feel my job is not secure." itemValue="3" />
+        <f:selectItem itemLabel="I am currently unemployed or retired." itemValue="14" />
+    </p:selectOneRadio>
 
 
-<h:head>
-</h:head>
-<h:body>
-    <p:panelGrid cellpadding="10" styleClass="invNBgrid">
-        <p:row>
-            <p:column styleClass="invRiskQuestion">
-                <p:outputLabel value="1. #{cepb.riskdata.getQuestion(0)}"/>
-            </p:column>
-        </p:row>
-        <p:row>
-            <p:column>
-                <p:selectOneRadio value="#{cepb.selectedchoice1}"
-                                  layout="pageDirection"
-                                  valueChangeListener="#{cBean.changeEvent}">
-                    <f:selectItems value="#{cepb.riskdata.getChoices(0).entrySet()}"
-                                   var="entry1" itemValue="#{entry1.key}" itemLabel="#{entry1.value}"/>
-                </p:selectOneRadio>
-            </p:column>
-        </p:row>
-    </p:panelGrid>
-</h:body>
-</html>
+</ui:composition>
