--- a/invessence/modules/web/src/main/webapp/pages/consumer/q5.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/q5.xhtml
@@ -1,34 +1,21 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:pe="http://primefaces.org/ui/extensions">
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions">
+    <h3>
+        5. What best describes your investment approach?
+    </h3>
+    <p:selectOneRadio value="#{cepb.selectedchoice5}"
+                      layout="pageDirection"
+                      valueChangeListener="#{cepb.onChangeValue}">
+        <f:selectItem itemLabel="Aggressive – long-term growth." itemValue="0" />
+        <f:selectItem itemLabel="Moderately aggressive – long-term growth." itemValue="7" />
+        <f:selectItem itemLabel="Conservative – preserve capital more than growth." itemValue="14" />
+        <f:selectItem itemLabel="Ultra conservative – safe with very low risk." itemValue="25" />
+        <f:selectItem itemLabel="No risk – all cash." itemValue="28" />
+    </p:selectOneRadio>
 
-
-<h:head>
-</h:head>
-<h:body>
-    <p:panelGrid cellpadding="10" styleClass="invNBgrid">
-        <p:row>
-            <p:column styleClass="invRiskQuestion">
-                <p:outputLabel value="5. #{cepb.riskdata.getQuestion(4)}"/>
-            </p:column>
-        </p:row>
-        <p:row>
-            <p:column>
-                <p:selectOneRadio value="#{cepb.selectedchoice5}"
-                                  layout="pageDirection"
-                                  valueChangeListener="#{cBean.changeEvent}">
-                    <f:selectItems value="#{cepb.riskdata.getChoices(4).entrySet()}"
-                                   var="entry5" itemValue="#{entry5.key}" itemLabel="#{entry5.value}"/>
-                </p:selectOneRadio>
-            </p:column>
-        </p:row>
-    </p:panelGrid>
-</h:body>
-</html>
+</ui:composition>
