--- a/invessence/modules/web/src/main/webapp/pages/consumer/riskQ.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/riskQ.xhtml
@@ -6,31 +6,31 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
 
-                    <p:carousel numVisible="1" value="#{cepb}" var="cepb"
-                                itemStyle="height:300px;width:550px; padding: 0px" effect="easeInStrong"
-                                style="margin-bottom:0">
-                        <p:tab title="1">
-                            <ui:include src="/pages/consumer/q1.xhtml"/>
-                        </p:tab>
-                        <p:tab title="2">
-                            <ui:include src="/pages/consumer/q2.xhtml"/>
-                        </p:tab>
-                        <p:tab title="3">
-                            <ui:include src="/pages/consumer/q3.xhtml"/>
-                        </p:tab>
-                        <p:tab title="4">
-                            <ui:include src="/pages/consumer/q4.xhtml"/>
-                        </p:tab>
-                        <p:tab title="5">
-                            <ui:include src="/pages/consumer/q5.xhtml"/>
-                        </p:tab>
-                        <p:tab title="6">
-                            <ui:include src="/pages/consumer/q6.xhtml"/>
-                        </p:tab>
-                        <p:tab title="7">
-                            <ui:include src="/pages/consumer/q7.xhtml"/>
-                        </p:tab>
-                    </p:carousel>
+    <p:panel id="risQ" style="height:300px;width:550px; border: 0px;">
+        <p:tabView orientation="top">
+            <p:tab title="1">
+                <ui:include src="/pages/consumer/q1.xhtml"/>
+            </p:tab>
+            <p:tab title="2">
+                <ui:include src="/pages/consumer/q2.xhtml"/>
+            </p:tab>
+            <p:tab title="3">
+                <ui:include src="/pages/consumer/q3.xhtml"/>
+            </p:tab>
+            <p:tab title="4" >
+                <ui:include src="/pages/consumer/q4.xhtml"/>
+            </p:tab>
+            <p:tab title="5" >
+                <ui:include src="/pages/consumer/q5.xhtml"/>
+            </p:tab>
+            <p:tab title="6" >
+                <ui:include src="/pages/consumer/q6.xhtml"/>
+            </p:tab>
+            <p:tab title="7">
+                <ui:include src="/pages/consumer/q7.xhtml"/>
+            </p:tab>
+        </p:tabView>
+    </p:panel>
 
 </ui:composition>
 
