--- a/invessence/modules/showcase/src/main/webapp/dashboard.xhtml
+++ b/invessence/modules/showcase/src/main/webapp/dashboard.xhtml
@@ -30,9 +30,8 @@
             }
 
             function skinPie() {
-                this.cfg.seriesColors = ['#dae8ef', '#27aae1', '#33ccff', '#9fadb5'];
                 this.cfg.grid = {
-                    background: '#ffffff',
+                    background: 'transparent',
                     borderColor: '#eaeaea',
                     gridLineColor: '#e5ebf0',
                     shadow: false,
@@ -41,11 +40,6 @@
                 this.cfg.seriesDefaults.shadow = false;
             }
         </script>
-        <style type="text/css">
-            .jqplot-target, .jqplot-axis {
-                color: #778D9B;
-            }
-        </style>
     </ui:define>
 
     <ui:define name="content">
