--- a/invessence/modules/showcase/src/main/webapp/q1.xhtml
+++ b/invessence/modules/showcase/src/main/webapp/q1.xhtml
@@ -5,6 +5,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
+    <p:panel id="q1" styleClass="Container100 NBwidget">
     <p:panelGrid cellpadding="10" styleClass="invNBgrid">
         <p:row>
             <p:column styleClass="invRiskQuestion">
@@ -22,4 +23,5 @@
             </p:column>
         </p:row>
     </p:panelGrid>
+    </p:panel>
 </ui:composition>
