--- a/invessence/modules/showcase/src/main/webapp/q2.xhtml
+++ b/invessence/modules/showcase/src/main/webapp/q2.xhtml
@@ -6,6 +6,7 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
 
+    <p:panel id="q2" styleClass="Container100 NBwidget">
     <p:panelGrid cellpadding="10" styleClass="invNBgrid">
         <p:row>
             <p:column styleClass="invRiskQuestion">
@@ -23,4 +24,5 @@
             </p:column>
         </p:row>
     </p:panelGrid>
+    </p:panel>
 </ui:composition>
