--- a/invessence/modules/showcase/src/main/webapp/custDialog.xhtml
+++ b/invessence/modules/showcase/src/main/webapp/custDialog.xhtml
@@ -1,25 +1,47 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:pe="http://primefaces.org/ui/extensions">
 
+    <p:dialog header="Personalize" widgetVar="custPrefDialog" modal="true"
+              showEffect="fade" hideEffect="fade" resizable="true"
+              width="674px" top="120px" height="524px" style="background-color: #fff; width: 674px; height: 524px; top:100px; padding: 0px">
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions"
-      xmlns:c="http://java.sun.com/jsp/jstl/core">
-<h:head>
-</h:head>
-
-<h:body>
-            <h:form id="custDForm">
-
-
-            </h:form>
-
-</h:body>
-</html>
-
+                       <p:panel id="inputDArea" styleClass="Container100" style="border: 0px">
+                           <div class="Container60 Responsive50">
+                               <div class="ContainerIndent">
+                                   <p:steps id="stepM" activeIndex="#{cepb.pTab}" styleClass="Container100">
+                                       <p:menuitem value="Personal" />
+                                       <p:menuitem value="Finance" />
+                                       <p:menuitem value="Risk" />
+                                   </p:steps>
+                                   <p:panel styleClass="Container100" style="border: 0px"
+                                            rendered="#{cepb.pTab == 0 ? 'true' : 'false'}">
+                                       <ui:include src="/aT1.xhtml"/>
+                                   </p:panel>
+                                   <p:panel styleClass="NBwidget Container100"
+                                            rendered="#{cepb.pTab == 1 ? 'true' : 'false'}">
+                                       <ui:include src="/aT2.xhtml"/>
+                                   </p:panel>
+                                   <p:panel styleClass="NBwidget Container100"
+                                            rendered="#{cepb.rTab == 0 ? 'true' : 'false'}">
+                                       <ui:include src="/q1.xhtml"/>
+                                   </p:panel>
+                                   <p:panel styleClass="NBwidget Container100"
+                                            rendered="#{cepb.rTab == 1 ? 'true' : 'false'}">
+                                       <ui:include src="/q2.xhtml"/>
+                                   </p:panel>
+                               </div>
+                           </div>
+                           <f:facet name="footer">
+                               <p:commandButton value="Previous" style="float: left" actionListener="#{cepb.gotoPrevTab}"
+                                                update="inputDArea"/>
+                               <p:commandButton value="Next" style="float: right" actionListener="#{cepb.gotoNextTab}"
+                                                update="inputDArea"/>
+                           </f:facet>
+                       </p:panel>
+       </p:dialog>
+</ui:composition>
 
